Added features for Greek